cmake_minimum_required(VERSION 3.17)
project(Recursion_cpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(Recursion_cpp
        "Deque(1).cpp"
        "Deque(2).cpp"
        "Deque(3).cpp"
        DoubleLinkedList.cpp
        DoubleLinkedList_Delete.cpp
        DoubleLinkedList_Index1.cpp
        DoubleLinkedList_Index2.cpp
        DoubleLinkedList_Insert.cpp
        HashmapCaching1.cpp
        HashmapCaching2-1.cpp
        HashmapCaching2-2.cpp
        HashmapCaching3.cpp
        LinkedList.cpp
        LinkedList_Delete1.cpp
        LinkedList_Delete2.cpp
        LinkedList_Index1.cpp
        LinkedList_Index2.cpp
        LinkedList_Insert1.cpp
        LinkedList_Insert2.cpp
        LinkedList_Insert3.cpp
        LinkedList_Insert4.cpp
        Queue.cpp
        "Stack(1).cpp"
        "Stack(2)1.cpp"
        "Stack(2)2.cpp"
        "Stack(2)3.cpp")
